stylesheet.css
html {
	font-family: 'Roboto', sans-serif;
	height:100%;
}

body {
	margin:0;
	height:100%;
}

h1 {
	color:black;
	margin-top:0;
	margin-bottom:0;
	font-family: 'Raleway', sans-serif;
}

#app {
	height:100%;
	display:flex;
	flex-direction:column;
}

#top_bar {
	height:82px;
	flex-shrink:0;
	background-color:#e0125d;
}

#content_area {
	flex-grow:1;
	display:flex;

}

#left_bar {
	width:62px;
	flex-shrink: 0;
	flex-grow: 0;
	border-right: 5px solid #e0125d;

}

#video_area {
	flex-grow:1;

}

video {
	width:100%;
	object-fit: fill;
}


#information_area {
	margin-top:-4px;
	border-top: 5px solid #e0125d;
	padding:20px;
	position:relative;
}

#information_streamer {
	font-family:'Raleway', sans-serif;
	-webkit-margin-before:0;
	margin-top:10px;
}

#information_streamer span {
	color: #e0125d;
}

#button_container {
	position:absolute;
	right:0;
	top:0;
	display:flex;
}

.button {
	background-color:#e0125d;
	margin:20px 20px 20px 0px;
	
	width:175px;
	height:50px;
	display:flex;
	align-items: center;
	justify-content: center;
	

}

.button p {
	font-family:'Raleway', sans-serif;
	font-size:20px;
	color:white;
	margin-top:0;
	margin-bottom:0;
}

#chat_top_bar {
	height:40px;
	flex-grow:0;
	flex-shrink:0;
	border-bottom:5px solid #e0125d;
	padding:12px;
	padding-left:20px;
}

#chat_area {
	flex-shrink:0;
	flex-grow:0;
	width:35%;
	border-left: 5px solid #e0125d;
	
	display:flex;
	flex-direction:column;

}

#fix {
	margin-top:auto;
}

#chat {
	flex-grow:3;
	overflow-y:scroll;
	display:flex;
	flex-direction:column;
	padding:20px;
}

#player_choice {
	flex-shrink:0;
	flex-grow:0;

	flex-basis:200px;
	border-top:5px solid #e0125d;
	padding:20px;
}


#choices_container {
	display:flex;
	flex-direction:column;
}

#choice_title {
	font-family:'Raleway', sans-serif;
	-webkit-margin-before:0;
	-webkit-margin-after:0;
	margin-bottom:10px;
}

.choice_container {
	flex-grow:1;
	height:100%;
}

.choice_button {
	background-color:#74dae8;
	border:5px solid #2a8695;
	width:100%;
	margin-top:10px;
	font-family:'Raleway', sans-serif;
	font-size:20px;
	color:black;

}

.comment {
	margin-top:10px;
	margin-bottom:10px;
	flex-grow:0;
	flex-shrink:0;
}

.comment_name {
	font-weight:bold;
}

.comment_pictures {

}

